fixed the overflow-x bug

--- a/style.css
+++ b/style.css
@@ -26,12 +26,15 @@
     --very-light-magenta: hsl(289, 100%, 72%);  /* (radio button outline) */
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 body {
     min-height: 100vh;
     background-color: var(--light-grayish-violet);
     display: grid;
     place-items: center;
-    overflow-x: hidden;
     padding: 3rem 2rem;
     position: relative;
 }
@@ -46,7 +49,7 @@ body {
 
     /* Container */
 .container {
-    gap: min(10rem, 12vw);
+    gap: min(10rem, 10vw);
     justify-content: center;
 }
 
@@ -58,7 +61,7 @@ body {
     background: linear-gradient(0deg, var(--light-violet), var(--light-magenta));
     position: absolute;
     top: 0;
-    left: -9rem;
+    left: -8.5rem;
     z-index: -10;
 }
 
